# rest-api

./: .gitignore  README.md  rest-api.cabal  stack.yaml
src/: App.hs  Main.hs
test/: Tests.hs
