name:                rest-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/rest-api#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable rest-api
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >=4.12 && <5
                     , Spock == 0.13.*
                     , mtl
                     , text
                     , aeson
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , http-types
                     , bytestring
                     , wai
  other-modules:     App

test-suite test
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test, src
  build-depends:       Spock == 0.13.*
                     , base >=4.12 && <5
                     , hspec
                     , hspec-wai
                     , mtl
                     , text
                     , aeson
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , http-types
                     , bytestring
                     , wai
  default-language:    Haskell2010
  other-modules:       App
